# splines

./: CMakeLists.txt  README.md
include/: BezierCurve.h  BezierPolyLine.h  ConstraintSet.h  Curve.h  FixedPoint.h  Integration.h  LeastSquares.h  Lerp.h  LinearMap.h  LinearPartition.h  NaturalSpline.h  ParametricCurve.h  Polynomials.h  QR.h  Vector.h
test/: CMakeLists.txt  bezier_spline_test.cpp  natural_spline_test.cpp  polynomials_test.cpp  zeros_test.cpp
